--- a/index.css
+++ b/index.css
@@ -56,9 +56,8 @@ body {
     grid-template-rows: 100px auto 1fr 100px;
     grid-template-areas: ". . ."
         ". MAIN_TITLE ."
-        ". COMMENT_BOX .";
+        ". FLEXBOX_AREA .";
 }
-
 
 
 #TITLE {
@@ -69,8 +68,7 @@ body {
     grid-area: MAIN_TITLE;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 40px;
-    grid-template-areas: "TITLE TITLE TITLE ";
-    
+    grid-template-areas: "TITLE TITLE TITLE ";   
 }
 
 
@@ -80,93 +78,23 @@ body {
     height: auto;
     max-width: 700px;
 }
+/*******************************************************************/
 
 
-#GRID-CONTAINER {
+
+
+
+
+
+
+
+/*******************************************************************/
+#FLEXBOX {
     width: 100%;
-    height: auto;
-    display: grid;
-
-    grid-area: REACT_ACCORDION;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 40px;
-    grid-template-areas: ". ACCORDION ACCORDION";
-}
-
-
-#HOLDER {
-    width: 100%;
-    height: 100%;
-}
-
-
-#TEXT {
-    grid-area: TEXT;
-    width: 100%;
-    height: auto;
-}
-
-
-
-#COMMENT_BOX {
-    grid-area: COMMENT_BOX;
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-column-gap: 40px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: "MAIN_TITLE MAIN_TITLE MAIN_TITLE";
-    
-    
-}
-
-
-#COMMENT_GRID {
-    grid-area: MAIN_TITLE;
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-template-rows: 40px 10px 70px 30px 40px 10px 70px 30px 300px;
-    grid-row-gap: 0px;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-        "TITLE-1"
-        "."
-        "TEXT-AREA-1"
-        "."
-        "TITLE-2"
-        "."
-        "TEXT-AREA-2"
-        "."
-        "COMMENT-AREA";
-
-}
-
-#ANSWERS {
-    grid-area: COMMENTS;
-    width: 100%;
-    height: 100%;
-    background-color: springgreen;
-    max-width: 700px;
-}
-
-#COMMENT-AREA {
-    grid-area: COMMENT-AREA;
-    width: 100%;
-    height: 100%;
-}
-
-#COMMENTS {
-    grid-area: COMMENT-AREA;
-    width: 100%;
-    height: 100%;
-}
-
-
-#TEXT-AREA-1 {
-    grid-area: TEXT-AREA-1;
-    width: 100%;
-    height: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: row;
+    grid-area: FLEXBOX_AREA;
 }
 
 
@@ -177,11 +105,17 @@ body {
 
 
 
-.TEXT-AREA {
-    grid-area: COMMENT-AREA;
-    width: 100%;
-    height: 100%;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 
 /******************************FONTS***************************/
