--- a/index.css
+++ b/index.css
@@ -122,6 +122,7 @@ body {
     width: 100%;
     height: 100%;
 }
+/*******************************************************************/
 
 
 
@@ -131,17 +132,7 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-/******************************FONTS***************************/
+/******************************FONTS********************************/
 
 h1 {
     font-family: sofia-pro, sans-serif;
@@ -171,4 +162,28 @@ p {
     font-weight: 400;
     font-style: normal;
     font-size: 1rem;
+}
+/******************************FONTS********************************/
+
+
+
+
+
+@media only screen and (max-width: 1000px) {
+    body {
+        background-color: lightblue;
+    }
+
+    #FLEXBOX {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        grid-area: FLEXBOX_AREA;
+}
+
+
+
+
 }
