--- a/index.css
+++ b/index.css
@@ -2,14 +2,9 @@
 body {
     width: 100%;
     height: 100%;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
     flex-direction: column;
     background-color: #2e2e2e;
 }
@@ -19,13 +14,8 @@ body {
 .center-holder {
     width: 100vw;
     height: auto;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -41,18 +31,52 @@ body {
     justify-content: center;
     grid-template-rows: auto auto auto;
     -webkit-box-align: start;
-    -webkit-align-items: start;
-    -ms-flex-align: start;
     align-items: start;
-    -webkit-align-content: start;
-    -ms-flex-line-pack: start;
     align-content: start;
     grid-template-columns: 1fr;
     grid-template-areas: "HEADER"
-        "MAIN"
-        "FOOTER"
-
+                         "MAIN"
+                         "FOOTER"
 }
+
+
+
+#HEADER {
+    width: 100vw;
+    height: auto;
+    display: grid;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+
+    grid-column-gap: 40px;
+    grid-row-gap: 60px;
+    grid-template-columns: 1fr 8fr 1fr;
+    grid-template-rows: auto auto auto;
+    background-color: #2e2e2e;
+    grid-template-areas: ". . ."
+                         ". CLOCK ."
+                         ". . .";
+}
+
+
+#CLOCK-CONTAINER {
+    grid-area: CLOCK;
+}
+
+
+
+#CONTAINER-TOP {
+    display: flex;
+    width: 100%;
+    background-color: #2e2e2e;
+    justify-content: center;
+}
+/*******************************************************************/
+
+
+
 
 
 
@@ -65,10 +89,32 @@ body {
 }
 
 
-#BOTTOM {
+#BOTTON {
     grid-area: FOOTER;
 }
-/*******************************************************************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -93,8 +139,8 @@ body {
     grid-template-columns: 1fr 8fr 1fr;
     grid-template-rows: 100px auto 1fr 100px;
     grid-template-areas: ". . ."
-        ". MAIN_TITLE ."
-        ". FLEXBOX_AREA .";
+                         ". MAIN_TITLE ."
+                         ". FLEXBOX_AREA .";
 }
 
 
@@ -155,7 +201,7 @@ body {
 
 .DROPDOWN {
     width: 100%;
-    height: 100px;
+    height: auto;
 }
 
 
@@ -267,9 +313,181 @@ p {
 
     background-color: aquamarine;
 
+    }
 }
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/******************************ACCORDION***************************/
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
+
+body {
+
+    font-family: 'Open Sans', Arial, Helvetica, Sans-serif, Verdana, Tahoma;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    color: #b63b4d;
+    text-decoration: none;
+}
+
+/** =======================
+ * Contenedor Principal
+ ===========================*/
+
+
+h1 a {
+    color: #c12c42;
+    font-size: 16px;
+}
+
+
+
+#ACCORDION-FIXED {
+    grid-area: ACCORDION;
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+
+#JQUERY {
+    position: relative;
+}
+
+.accordion {
+    width: 100%;
+    height: auto;
+
+    margin: 0px auto 0px;
+    background: #2e2e2e;   
+}
+
+.accordion .link {
+    width: 100%;
+    height: auto;
+    cursor: pointer;
+    display: block;
+    padding: 15px 15px 15px 42px;
+    color: #d9d9d9;
+    font-size: 14px;
+    font-weight: 700;
+    border-bottom: 1px solid #CCC;
+    position: relative;
+    -webkit-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.accordion li:last-child .link {
+    border-bottom: 0;
+}
+
+.accordion li i {
+    position: absolute;
+    top: 16px;
+    left: 12px;
+    font-size: 18px;
+    color: #d9d9d9;
+    -webkit-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.accordion li i.fa-chevron-down {
+    right: 12px;
+    left: auto;
+    font-size: 16px;
+}
+
+.accordion li.open .link {
+    color: #b63b4d;
+}
+
+.accordion li.open i {
+    color: #b63b4d;
+}
+
+.accordion li.open i.fa-chevron-down {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
+.accordion li.default .submenu {
+    display: block;
+}
+
+/**
+ * Submenu
+ -----------------------------*/
+.submenu {
+    display: none;
+    background: hsl(47, 100%, 75%);
+    font-size: 14px;
+}
+
+.submenu li {
+    border-bottom: 1px solid #4b4a5e;
+}
+
+.submenu a {
+    display: block;
+    text-decoration: none;
+    color: #2e2e2e;
+    padding: 12px;
+    padding-left: 42px;
+    -webkit-transition: all 0.25s ease;
+    -o-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+}
+
+.submenu a:hover {
+    background: #b63b4d;
+    color: #efefef;
+}
+
+/******************************ACCORDION***************************/
