--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
-    background-color: #2e2e2e;
+    background-color: #6aa4ce;
 }
 
 
@@ -80,6 +80,23 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #TOP {
     grid-area: HEADER;
 }
@@ -95,9 +112,35 @@ body {
 
 
 
+#OZ {
+    background-image: url(assets/images/personal-website.PNG);
+    background-size: cover;
+    background-position: center;  
+}
 
 
 
+#MOVIES {
+    background-image: url(assets/images/database-project.PNG);
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+#TARANTINO {
+    background-image: url(assets/images/tarantino.PNG);
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+#PACMAN {
+    background-image: url(assets/images/pac-man.PNG);
+    background-size: cover;
+    background-position: center;
+}
 
 
 
@@ -195,19 +238,20 @@ body {
     grid-template-areas: "IMAGE"                        
                          "DROPDOWN";
     
-    background-color: aquamarine;  
-
+    
 }
 
 .DROPDOWN {
     width: 100%;
     height: auto;
+    border-radius: 3px;
 }
 
 
 .IMAGE {
     width: 100%;
     height: 100%;
+    border-radius: 3px;
 }
 /*******************************************************************/
 
